--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my_assi",
-  "homepage": "https://pavithra-1123.github.io/my_assi",
+  "homepage": "https://balanraj.github.io/Issue-fixed",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
